# worksheet_maker_gui

./: .gitignore  .prettierignore  DESIGN.md  README.md  basic_gui.py  card_generator.py  card_maker.py  dobble_maker.py  dobble_maker.spec  download_images.py  eslint.config.js  index.html  label_generator.py  label_maker.py  learning_material_maker.py  learning_material_maker.spec  moveitemstree.py  package-lock.json  package.json  ppt_dobble_generator.py  ppt_dobble_maker.py  pyproject.toml  random_words.txt  requirements.txt  syllable.py  template_24.docx  template_for_dobble_cards.pptx  template_for_word_flicker.pptx  text2image.py  tsconfig.app.json  tsconfig.node.json  utils.py  vite.config.ts  word2png.py  word_flicker_generator.py  word_flicker_maker.py  word_flicker_maker.spec  word_worksheet_generator.py  word_worksheet_maker.py  word_worksheet_maker.spec  (+5 more)
backend/: __init__.py  generators.py  image_search.py  main.py  schemas.py
docs/plans/: 2026-05-02-react-transformation.md  2026-05-03-ux-readiness-improvements.md
docs/reports/: 2026-05-03-worksheet-best-practices.md
src/: App.test.tsx  App.tsx  main.tsx  styles.css  styles.test.ts
src/lib/: dobble.test.ts  dobble.ts  downloads.test.ts  downloads.ts  imageSearch.test.ts  imageSearch.ts  materials.test.ts  materials.ts  wordSearch.test.ts  wordSearch.ts  words.test.ts  words.ts
tests/: test_backend.py
